text align no longer justified

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -94,9 +94,6 @@ img.small {
     max-height: 10vh;
 }
 
-p {
-    text-align: justify;
-}
 p.centered-text {
     text-align: center;
 }
